5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1734_2505.log
== TEST (2019-05-16 08:11:04) 
-- CODE:
from math import*
x=eval(input("o angulo: "))
k=int(input("digite o numero de termos na serie: "))
c=0
s=0
b=1
while(c<k):
	si=-1**c
	soma=soma+si*((x**b)/factorial(b))
	c=c+1
	b=b+2
print(round(soma, 10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    soma=soma+si*((x**b)/factorial(b))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:11:43) 
-- CODE:
from math import*
x=eval(input("o angulo: "))
k=int(input("digite o numero de termos na serie: "))
c=0
s=0
b=1
while(c<k):
	si=-1**c
	s=s+si*((x**b)/factorial(b))
	c=c+1
	b=b+2
print(round(s, 10))
-- OUTPUT:
-2.3012952459
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 08:12:03) 
-- CODE:
from math import*
x=eval(input("o angulo: "))
k=int(input("digite o numero de termos na serie: "))
c=0
s=0
b=1
while(c<k):
	si=-1**c
	s=s+si*((x**b)/factorial(b))
	c=c+1
	b=b+2
print(round(s, 10))
-- EXECUTION TIME:
0.109311
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
-2.3012952459
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
2.3011348047
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
-1.249088823
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:12:55) 
-- CODE:
from math import*
x=eval(input("o angulo: "))
k=int(input("digite o numero de termos na serie: "))
c=0
s=0
b=1
while(c<k):
	si=(-1)**c
	s=s+si*((x**b)/factorial(b))
	c=c+1
	b=b+2
print(round(s, 10))
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 08:13:08) 
-- CODE:
from math import*
x=eval(input("o angulo: "))
k=int(input("digite o numero de termos na serie: "))
c=0
s=0
b=1
while(c<k):
	si=(-1)**c
	s=s+si*((x**b)/factorial(b))
	c=c+1
	b=b+2
print(round(s, 10))
-- EXECUTION TIME:
0.168261
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
